# micro-saas-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  conftest.py  entrypoint.sh  lambda-vpc.config.example.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  serverless-lambda-vpc.cjs  serverless.yml  test-vpc.cjs
backend/alembic/: env.py
backend/alembic/versions/: 14c67e743eec_add_scheduler_task_runs.py  723e9d75c9e2_initial_items_table.py  9c0b02927ff0_.py  a1b2c3d4e5f7_initial_schema.py  a36c42a0dca5_add_verification_codes.py  d5857fc42b2e_add_oauth_identities.py  e62aef1f5da8_users_status_postgres_enum.py  f4a1c8e2b0d1_users_table.py  g5b2c9e3a1d2_users_id_uuid_if_int.py
backend/src/: background_handler.py  config.py  cron_handler.py  db.py  handler.py  main.py  migrate_handler.py  scheduler_handler.py
backend/src/apps/demo/: api_errors.py  models.py  routes.py
backend/src/apps/health/: __init__.py  routes.py
backend/src/apps/notifications/: config.py  sender.py  service.py  tasks.py  templates.py
backend/src/apps/users/: __init__.py  (+8 more)
backend/src/background/: __init__.py  config.py  decorator.py  enqueue.py  executor.py  sqs.py
backend/src/scheduler/: __init__.py  bootstrap.py  config.py  decorator.py  due.py  due_checks.py  enqueue.py  models.py  payload.py  registry.py  validation.py
backend/src/utils/: api_errors.py  db.py  deps.py  env.py
backend/tests/: db_schema.py  test_env.py  test_health.py  test_main.py
(+71 files in other folders)
